--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@
   background-color: lightblue;
   padding: 10px;
   grid-row: 1/3;
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr 3fr;
 }
 
 .content {
   background-color: lightcoral;
   padding: 10px;
-
 }
