--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   grid-template-columns:3fr 2fr;
   align-items: center;
   padding-right: 5px;
+  gap: 10px;
 }
 
 .search {
@@ -37,7 +38,8 @@
   
 }
 
-.profile {
+.profile,
+.buttons {
   display: flex;
   gap: 10px;
   justify-content: flex-end;
@@ -47,6 +49,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  gap: 10px;
 }
 
 .profile-card {
@@ -55,30 +58,52 @@
   gap: 10px;
 }
 
-.buttons {
-  display: flex;
-  gap: 10px;
-  justify-content: flex-end;
-}
-
 button {
   background-color: purple;
   color: white;
   width: 5rem;
-  padding: 3px;
+  padding: 5px;
   border: none;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .sidebar {
   background-color: lightblue;
-  padding: 10px;
-  grid-row: 1/3;
-  display: grid;
-  grid-template-rows: 1fr 3fr 1fr 3fr;
+  padding: 15px;
+  grid-row: 1/-1;
+}
+
+.sidebar > * {
+  margin-bottom: 10px;
+}
+
+.divider {
+  border-top: 2px solid #bbb;
+  border-radius: 2px;
+}
+
+li {
+  list-style: none;
 }
 
 .content {
   background-color: lightcoral;
   padding: 10px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 15px;
+}
+
+.your-projects {
+  grid-column: 1/-1;
+}
+
+.cards {
+  background-color: white;
+  height: 200px;
 }
