--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 2fr 6fr;
+  grid-template-columns: 1fr 6fr;
+  grid-template-rows: 170px 1fr;
+  height: 100vh;
 }
 
 .header {
@@ -74,7 +75,7 @@ button {
 }
 
 .sidebar > * {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .divider {
@@ -88,22 +89,43 @@ li {
 
 .content {
   background-color: lightcoral;
-  padding: 10px;
+  padding: 20px;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
 }
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 30px;
+  grid-template-rows: 3em;
 }
 
 .your-projects {
   grid-column: 1/-1;
+  display: grid;
+  align-items: center;
 }
 
 .cards {
   background-color: white;
-  height: 200px;
+  padding: 30px;
+  display: grid;
+  gap: 5px;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 10px;
+}
+
+.cards > :nth-child(1),
+.cards > :nth-child(2) {
+  grid-column: 1/-1;
+}
+
+
+.project-icons {
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
 }
