--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 6fr;
+  grid-template-columns: 2fr 7fr;
   grid-template-rows: 170px 1fr;
   height: 100vh;
 }
@@ -78,9 +78,9 @@ button {
   margin-bottom: 15px;
 }
 
-.divider {
-  border-top: 2px solid #bbb;
-  border-radius: 2px;
+hr {
+  border: 1px solid red;
+  height: 0;
 }
 
 li {
@@ -89,22 +89,28 @@ li {
 
 .content {
   background-color: lightcoral;
-  padding: 20px;
+  padding: 20px 20px 60px 20px;
   display: grid;
   grid-template-columns: 2fr 1fr;
+  gap: 30px;
 }
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 30px;
-  grid-template-rows: 3em;
+  grid-template-rows: 3rem 1fr;
 }
 
-.your-projects {
-  grid-column: 1/-1;
+.your-projects,
+.announcements,
+.trending {
   display: grid;
   align-items: center;
+}
+
+.card-container {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .cards {
@@ -128,4 +134,18 @@ li {
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   justify-items: center;
+}
+
+.content-right {
+  display: grid;
+  grid-template-rows: 3em 1fr 3em 1fr;
+}
+
+.announcement-card,
+.trending-card {
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  display: grid;
+  gap: 10px;
 }
