--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-size: 20px;
 }
 
 .container {
@@ -70,7 +71,7 @@ button {
 
 .sidebar {
   background-color: lightblue;
-  padding: 15px;
+  padding: 25px;
   grid-row: 1/-1;
 }
 
@@ -83,8 +84,14 @@ hr {
   height: 0;
 }
 
-li {
+li,
+.dashboard {
   list-style: none;
+  display: grid;
+  grid-template-columns: 3rem 1fr;
+  justify-items: start;
+  align-items: center;
+  padding: 10px 0px;
 }
 
 .content {
