--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
   grid-column: 2/3;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  box-shadow: 0px 2px 2px rgb(171, 171, 171);
+  position: relative;
 }
 
 .header-top {
@@ -137,6 +139,8 @@ li,
   grid-template-columns: 1fr 1fr;
   border-radius: 10px;
   border-left: 8px solid rgb(215, 187, 62);
+  box-shadow: 0px 2px 2px rgb(171, 171, 171);
+  position: relative;
 }
 
 .cards > :nth-child(1),
@@ -166,6 +170,8 @@ li,
   display: grid;
   gap: 5px;
   align-items: center;
+  box-shadow: 0px 2px 2px rgb(171, 171, 171);
+  position: relative;
 }
 
 .random-users {
