--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 
 .header {
   background-color: white;
+  color: #3d3332;
   padding: 20px;
   grid-column: 2/3;
   display: grid;
@@ -71,7 +72,7 @@
 }
 
 button {
-  background-color: rgb(24, 134, 112);
+  background-color: #EE6A35;
   color: white;
   width: 5rem;
   padding: 5px;
@@ -80,7 +81,7 @@ button {
 }
 
 .sidebar {
-  background-color: rgb(24, 134, 112);
+  background-color : #3d3332;
   padding: 25px;
   grid-row: 1/-1;
 }
@@ -139,7 +140,7 @@ li,
   gap: 5px;
   grid-template-columns: 1fr 1fr;
   border-radius: 10px;
-  border-left: 8px solid rgb(215, 187, 62);
+  border-left: 8px solid #FAC6B5;
   box-shadow: 0px 2px 2px rgb(171, 171, 171);
   position: relative;
 }
@@ -185,11 +186,17 @@ li,
 .trending-avatar {
   grid-row: 1/-1;
   display: grid;
-  justify-content: center;
-  align-items: center;
 }
 
 .username-and-handle {
   grid-row: 3/-3;
 }
+
+.trending-avatar,
+.avatar {
+  outline: 2px solid #EE6A35;
+  outline-offset: -1px;
+  border-radius: 35px;
+}
+
 
