--- a/style.css
+++ b/style.css
@@ -1,29 +1,48 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 20px;
 }
 
 body {
-  font-family: 'Barlow', sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+}
+
+.sidebar,
+.your-projects,
+.project-title,
+.announcements,
+.trending,
+.handle,
+.message-title {
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.dashboard,
+.name-handle {
+  font-size: 25px;
 }
 
 .container {
   display: grid;
   grid-template-columns: 2fr 7fr;
-  grid-template-rows: 170px 1fr;
+  grid-template-rows: 200px 1fr;
   height: 100vh;
 }
 
 .header {
   background-color: white;
-  color: #3d3332;
-  padding: 20px;
+  color: #44424a;
+  padding: 30px;
   grid-column: 2/3;
   display: grid;
   grid-template-rows: 1fr 1fr;
   box-shadow: 0px 2px 2px rgb(171, 171, 171);
   position: relative;
+  font-weight: 800;
+  gap: 20px;
 }
 
 .header-top {
@@ -72,22 +91,23 @@ body {
 .profile-card {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 25px;
 }
 
 button {
   background-color: #EE6A35;
   color: white;
-  width: 5rem;
+  width: 6rem;
   padding: 5px;
   border: none;
   border-radius: 30px;
-  font-family: 'Barlow', sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
+  font-size: 16px;
 }
 
 .sidebar {
-  background-color : #3d3332;
+  background-color : #44424a;
   padding: 25px;
   grid-row: 1/-1;
 }
@@ -99,8 +119,10 @@ button {
 
 hr {
   border: 0;
-  height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    /* divider code from https://css-tricks.com/examples/hrs/ */
 }
 
 li,
@@ -111,14 +133,16 @@ li,
   justify-items: start;
   align-items: center;
   padding: 10px 0px;
+  gap: 20px;
 }
 
 .content {
   background-color: rgb(229, 229, 229);
-  padding: 20px 20px 60px 20px;
+  padding: 20px 30px 60px 30px;
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 30px;
+  color: #44424a;
 }
 
 .projects {
@@ -133,22 +157,25 @@ li,
   align-items: center;
 }
 
+.project-icon {
+  filter: opacity(60%);
+}
+
 .card-container {
   display: grid;
   gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 .cards {
   background-color: white;
   padding: 30px;
   display: grid;
-  gap: 5px;
   grid-template-columns: 1fr 1fr;
   border-radius: 10px;
   border-left: 8px solid #FAC6B5;
   box-shadow: 0px 2px 2px rgb(171, 171, 171);
-  position: relative;
+  align-items: center;
 }
 
 .cards > :nth-child(1),
@@ -170,27 +197,34 @@ li,
   grid-template-rows: 3em 1fr 3em 1fr;
 }
 
+.message {
+  display: grid;
+  gap: 5px;
+}
+
 .announcement-card,
 .trending-card {
   background-color: white;
   padding: 30px;
   border-radius: 10px;
   display: grid;
-  gap: 5px;
+  gap: 15px;
   align-items: center;
   box-shadow: 0px 2px 2px rgb(171, 171, 171);
   position: relative;
+  justify-content: start;
 }
 
 .random-users {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 1fr;
-  gap: 10px;
+  align-items: center;
+  gap: 20px;
 }
 
 .trending-avatar {
-  grid-row: 1/-1;
+  grid-row: 1/3;
   display: grid;
 }
 
@@ -203,6 +237,20 @@ li,
   outline: 2px solid #EE6A35;
   outline-offset: -1px;
   border-radius: 35px;
+}
+
+a {
+  text-decoration: none;
+  color: #FAC6B5;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.credit {
+  font-size: 15px;
+  color: #FAC6B5;
+  display: flex;
+  gap: 5px;
 }
 
 
