--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ li,
 
 .content-right {
   display: grid;
-  grid-template-rows: 3em 1fr 3em 1fr;
+  grid-template-rows: 3rem 1fr 3rem 1fr;
 }
 
 .message {
