--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 18px;
 }
@@ -47,7 +47,7 @@ body {
 
 .header-top {
   display: grid;
-  grid-template-columns:3fr 2fr;
+  grid-template-columns: 3fr 2fr;
   padding-right: 5px;
   gap: 10px;
 }
@@ -95,19 +95,19 @@ body {
 }
 
 button {
-  background-color: #EE6A35;
+  background-color: #ee6a35;
   color: white;
   width: 6rem;
   padding: 5px;
   border: none;
   border-radius: 30px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-align: center;
   font-size: 16px;
 }
 
 .sidebar {
-  background-color : #44424a;
+  background-color: #44424a;
   padding: 25px;
   grid-row: 1/-1;
 }
@@ -119,10 +119,10 @@ button {
 
 hr {
   border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    /* divider code from https://css-tricks.com/examples/hrs/ */
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  /* divider code from https://css-tricks.com/examples/hrs/ */
 }
 
 li,
@@ -173,7 +173,7 @@ li,
   display: grid;
   grid-template-columns: 1fr 1fr;
   border-radius: 10px;
-  border-left: 8px solid #FAC6B5;
+  border-left: 8px solid #fac6b5;
   box-shadow: 0px 2px 2px rgb(171, 171, 171);
   align-items: center;
 }
@@ -182,7 +182,6 @@ li,
 .cards > :nth-child(2) {
   grid-column: 1/-1;
 }
-
 
 .project-icons {
   grid-column: 2;
@@ -234,23 +233,21 @@ li,
 
 .trending-avatar,
 .avatar {
-  border: 2px solid #EE6A35;
-  background-color: #EE6A35;
+  border: 2px solid #ee6a35;
+  background-color: #ee6a35;
   border-radius: 50px;
 }
 
 a {
   text-decoration: none;
-  color: #FAC6B5;
+  color: #fac6b5;
   font-size: 15px;
   font-weight: 400;
 }
 
 .credit {
   font-size: 15px;
-  color: #FAC6B5;
+  color: #fac6b5;
   display: flex;
   gap: 5px;
 }
-
-
