--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 18px;
+  width: 100vw;
 }
 
 .sidebar,
